--- a/less/styles.less
+++ b/less/styles.less
@@ -15,6 +15,19 @@
 body {
   background-color: @blue;
   color: #fff;
+
+// Media queries for different behaviors of this element on different resolutions.
+  @media (min-width: @screen-lg-min) {
+    background-color: @orange;
+  }
+  @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    background-color: @dark-blue; 
+  }
+  @media (max-width: @screen-sm-max) {
+    margin-bottom: 20px;
+    background-color: @green;
+  } 
+
 }
 
 
