--- a/css/styles.css
+++ b/css/styles.css
@@ -5775,10 +5775,39 @@ button.close {
 .jumbotron {
   padding-top: 50px;
   background-color: transparent;
+  text-align: center;
+  color: #0c218c;
+  margin-top: 20px;
+}
+.jumbotron2 {
+  padding-top: 20px;
+  background-color: transparent;
+  text-align: center;
+  font-size: 20px;
+  color: #0c218c;
+  margin-top: 10px;
 }
 body {
-  background-color: #33b5e5;
   color: #fff;
+}
+@media (min-width: 1200px) {
+  body {
+    background: url(../img/fondo.jpg) no-repeat;
+    background-size: cover;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  body {
+    background: url(../img/fondo.jpg) no-repeat;
+    background-size: cover;
+  }
+}
+@media (max-width: 991px) {
+  body {
+    margin-bottom: 20px;
+    background: url(../img/fondo.jpg) no-repeat;
+    background-size: cover;
+  }
 }
 .marketing-box {
   padding: 10px;
@@ -5787,16 +5816,24 @@ body {
 @media (min-width: 1200px) {
   .marketing-box {
     background-color: #ffbb33;
+    margin-top: 120px;
+    height: 200px;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .marketing-box {
-    background-color: #0099cc;
+    background-color: #ffbb33;
+    margin-top: 120px;
+    height: 200px;
   }
 }
 @media (max-width: 991px) {
   .marketing-box {
     margin-bottom: 20px;
-    background-color: #99cc00;
+    background-color: #ffbb33;
+    height: 200px;
   }
+}
+.img-learn-more {
+  text-align: center;
 }
