--- a/less/styles.less
+++ b/less/styles.less
@@ -10,25 +10,36 @@
 .jumbotron {
   padding-top: 50px;
   background-color: transparent;
+  text-align:center;
+  color:#0c218c;
+  margin-top:20px;
+}
+
+.jumbotron2 {
+  padding-top: 20px;
+  background-color: transparent;
+  text-align:center;
+  font-size:20px;
+  color:#0c218c;
+  margin-top:10px;
 }
 
 body {
-  background-color: @blue;
   color: #fff;
-
 // Media queries for different behaviors of this element on different resolutions.
   @media (min-width: @screen-lg-min) {
-    background-color: @orange;
+    background: url(../img/fondo.jpg) no-repeat;
+    background-size: cover;
   }
   @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-    background-color: @dark-blue; 
+    background: url(../img/fondo.jpg) no-repeat; 
+    background-size: cover;
   }
   @media (max-width: @screen-sm-max) {
     margin-bottom: 20px;
-    background-color: @green;
+   background: url(../img/fondo.jpg) no-repeat;
+   background-size: cover;
   } 
-
-
 }
 
 
@@ -39,12 +50,25 @@ body {
   // Media queries for different behaviors of this element on different resolutions.
   @media (min-width: @screen-lg-min) {
   	background-color: @orange;
+     margin-top:120px;
+     height:200px;
   }
+
   @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-  	background-color: @dark-blue;	
+  	background-color: @orange;	
+    margin-top:120px;
+    height:200px;
   }
+
   @media (max-width: @screen-sm-max) {
   	margin-bottom: 20px;
-  	background-color: @green;
+  	background-color: @orange;
+    //margin-top:120px;
+    height:200px; 
   } 
 }
+
+.img-learn-more{
+  text-align:center;
+}
+
